# ooxml-viewer

./: .gitignore  AGENTS.md
.github/workflows/: deploy.yml
wasm-core/: Cargo.toml
wasm-core/src/: lib.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.ts  style.css
