[package]
name = "wasm-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true
